--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -463,8 +463,90 @@ body {
   border: none;
 }
 
+.carTitle {
 
 
+  header{
+    display: flex;
+    max-width: fit-content;
+    margin: 0 auto 32px;
+    color: #999;
+    gap: 17px;
+    font-size: 12px;
+  }
+}
 
+.carContainer{
+  max-width: 1200px;
+  margin: 0 auto;
+
+
+  .CarInfoContainer{
+
+    margin-top: 30px;
+
+
+    .carInfo {
+
+      font-size: 16px;
+      font-weight: normal;
+      @media screen and (max-width: 820px) {
+        h3{
+          font-size: 14px;
+
+
+        }
+        p{
+          font-size: 12px;
+        }
+      }
+      h3 {
+        border-bottom: 1px solid #D9D9D9;
+        max-width: fit-content;
+        margin-bottom: 5px;
+
+
+        a {
+          text-decoration: none;
+          color: #000;
+        }
+      }
+    }
+
+    main{
+      background-color: #F2F7FE;
+      padding: 30px;
+      width: fit-content;
+
+      .carPrice{
+
+
+        button {
+          text-transform: uppercase;
+          font-size: 14px;
+          background-color: #0084DC;
+          padding: 15px 57px;
+          border: none;
+          color: #fff;
+        }
+        div{
+          display: flex;
+          gap: 14px;
+          align-items: center;
+          margin-bottom: 20px;
+        }
+        p{
+          font-size: 14px;
+          text-transform: uppercase;
+        }
+        h5{
+          font-size: 18px;
+        }
+      }
+    }
+
+  }
+
+}
 
 
