--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,21 +1,21 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css";
 @import "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css";
 
-@font-face {
-  font-family: 'Gotham Pro';
-  src: url('../public/fonts/gothamPro/gothampro.ttf') format('ttf');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+
 
 @font-face {
-  font-family: 'Gotham Pro';
-  src: url('../public/fonts/gothamPro/gothampro_medium.ttf') format('ttf');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
+  font-weight: 400;
+  font-family: Roboto;
+  src: url("../public/fonts/gothamPro/gothampro.ttf");
 }
+
+//@font-face {
+//  font-family: 'Gotham Pro';
+//  src: local('Gotham Pro');
+//  font-weight: bold;
+//  font-style: normal;
+//  font-display: swap;
+//}
 
 * {
   box-sizing: border-box;
@@ -28,11 +28,11 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: 'Gotham Pro', Arial, sans-serif;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 .no-scroll {
-  overflow-y: hidden;
+  overflow: hidden;
   height: 100%;
 }
 
@@ -93,12 +93,17 @@ body {
   }
 }
 
-.navbarMenu{
+.navbarMenuLogo {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.navbarMenu {
   margin-top: 50px;
   display: flex;
   flex-direction: column;
 
-  a{
+  a {
     text-decoration: none;
     color: #000;
     font-size: 18px;
@@ -145,6 +150,20 @@ body {
 
 }
 
+.titlePge {
+
+
+  header {
+    display: flex;
+    max-width: fit-content;
+    margin: 0 auto 32px;
+    color: #999;
+    gap: 17px;
+    font-size: 12px;
+  }
+
+}
+
 
 .catalog {
   max-width: 1440px;
@@ -170,14 +189,7 @@ body {
   }
 
   .catalogTitle {
-    .catalogTitleHeader {
-      display: flex;
-      max-width: fit-content;
-      margin: 0 auto 32px;
-      color: #999;
-      gap: 17px;
-      font-size: 12px;
-    }
+
 
     main {
       p {
@@ -370,7 +382,7 @@ body {
   overflow-block: hidden;
 
 
-  .navbarModal{
+  .navbarModal {
     position: fixed;
     top: 25%;
     left: 0;
@@ -378,7 +390,6 @@ body {
     bottom: 0;
   }
 }
-
 
 
 .inputContainer {
@@ -508,7 +519,7 @@ body {
   margin: 0 auto;
 
 
-  .carSlider{
+  .carSlider {
     width: 557px;
     height: 360px;
 
@@ -518,18 +529,6 @@ body {
     }
   }
 
-  .carTitle {
-
-
-    header {
-      display: flex;
-      max-width: fit-content;
-      margin: 0 auto 32px;
-      color: #999;
-      gap: 17px;
-      font-size: 12px;
-    }
-  }
 
   .CarInfoContainer {
 
@@ -566,7 +565,7 @@ body {
     }
 
 
-    .carInfoAndApplication{
+    .carInfoAndApplication {
 
       display: flex;
       justify-content: space-between;
@@ -577,6 +576,7 @@ body {
         @media screen and (max-width: 820px) {
           width: 100%;
         }
+
         .carPriceAndDelivery {
           width: 85%;
           background-color: #F2F7FE;
@@ -601,11 +601,13 @@ body {
             @media screen and (max-width: 820px) {
               flex-direction: column;
             }
+
             .carDelivery {
               width: 30%;
               @media screen and (max-width: 820px) {
                 width: 100%;
               }
+
               ul {
                 list-style: none;
 
@@ -629,6 +631,7 @@ body {
               @media screen and (max-width: 820px) {
                 margin-right: auto;
               }
+
               button {
                 text-transform: uppercase;
                 font-size: 14px;
@@ -694,38 +697,41 @@ body {
     @media screen and (max-width: 820px) {
       width: 100%;
     }
-    h2{
+
+    h2 {
       font-size: 18px;
       margin-bottom: 20px;
     }
-    div{
+
+    div {
       margin-bottom: 30px;
     }
-    .carDescriptionComment{
 
-      ul{
+    .carDescriptionComment {
+
+      ul {
         list-style: none;
       }
     }
 
 
-    .carDescriptionConfiguration{
-      li{
+    .carDescriptionConfiguration {
+      li {
         margin-left: 10px;
         list-style: '- ';
       }
     }
 
-    .carDescriptionWarranty{
-      li{
+    .carDescriptionWarranty {
+      li {
         margin-left: 15px;
         list-style: '✔️';
       }
     }
 
-    .carDescriptionAdvantages{
+    .carDescriptionAdvantages {
 
-      li{
+      li {
         list-style: '⭐';
         margin-left: 15px;
       }
@@ -733,4 +739,103 @@ body {
   }
 }
 
+.headerTitlePage {
 
+  margin-bottom: 40px;
+
+  h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+}
+
+
+.frequentQuestions {
+  max-width: 1440px;
+  margin: 0 auto;
+
+
+}
+
+
+.accordion {
+
+  margin-bottom: 20px;
+
+  h3 {
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .accordionContent {
+    width: 50%;
+    margin: 0 auto;
+    z-index: 8;
+    transition: background-color 0.3s ease;
+    border-radius: 10px;
+
+    @media screen and (max-width: 820px) {
+      width: 100%;
+      padding: 0 20px;
+    }
+
+    &.closed {
+      background-color: rgba(0, 0, 0, 0);
+    }
+
+    &.open {
+      background-color: #f2f2f2;
+    }
+
+    h4 {
+      padding: 20px;
+      display: flex;
+      gap: 5px;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .accordionContentBody {
+      padding: 20px 54px;
+
+      p {
+        margin-top: 20px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+.image {
+  width: 309px;
+  height: 200px;
+
+  @media screen and (max-width: 820px) {
+    width: 192px;
+    height: 124px;
+  }
+}
+
+
+.feedback {
+  max-width: 1400px;
+  margin: 0 auto;
+
+  .feedbackContent {
+    width: 50%;
+    margin: 0 auto;
+    font-weight: lighter;
+
+    h4 {
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 14px;
+      line-height: 140%;
+      margin-top: 20px;
+    }
+  }
+
+}
